--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Interface\HelpWindow.cpp" />
     <ClCompile Include="imgui-SFML.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
@@ -186,8 +187,11 @@
     <ClCompile Include="src\Interface\Serialization.cpp" />
     <ClCompile Include="src\Interface\Toolbox.cpp" />
     <ClCompile Include="src\Component.cpp" />
+    <ClCompile Include="src\Interface\UIWindow.cpp" />
+    <ClCompile Include="src\Control\UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Interface\HelpWindow.h" />
     <ClInclude Include="src\Control\LineTool.h" />
     <ClInclude Include="src\Control\NoteAdder.h" />
     <ClInclude Include="src\Core\Note.h" />
@@ -217,6 +221,8 @@
     <ClInclude Include="src\Core\Join.h" />
     <ClInclude Include="src\Core\Wire.h" />
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\Interface\UIWindow.h" />
+    <ClInclude Include="src\Control\UIManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Assets\Fonts\JetBrainsMono\JetBrainsMono-Bold.ttf" />
