--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -232,7 +232,7 @@
     <Image Include="Assets\Logo\RedWireIcon.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Assets\Resource\CommonResource.rc" />
+    <ResourceCompile Include="Assets\Resource\Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
