Added icon to SFML window

--- a/RedWire/RedWire.vcxproj
+++ b/RedWire/RedWire.vcxproj
@@ -230,6 +230,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Logo\RedWireIcon.ico" />
+    <Image Include="Assets\Logo\RedWireIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Assets\Resource\Resource.rc" />
