--- a/RedWire/RedWire.vcxproj.filters
+++ b/RedWire/RedWire.vcxproj.filters
@@ -232,6 +232,9 @@
     <Image Include="Assets\Logo\RedWireIcon.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Assets\Logo\RedWireIcon.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Assets\Resource\Resource.rc">
